PI-3766 - Upgrade to JDK 25 and Node 24 (#529)